<resources>
    <string name="app_name">EasyRentals</string>
    <string name="listCar">List your car</string>
    <string name="searchText">Enter your location</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="carType">Which car do you own?</string>
    <string name="year">Year</string>
    <string name="enterYear">Enter year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="transmission">Transmission</string>
    <string name="odometer">Odometer</string>
    <string name="trim">Trim (optional)</string>
    <string name="style">Style</string>
    <string name="features">Select the features in your car</string>
    <string name="gps">GPS</string>
    <string name="hybrid">Hybrid</string>
    <string name="pet_friendly">Pet Friendly</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="audioPlayer">Audio Player</string>
    <string name="sunroof">SunRoof</string>
    <string name="zipcode">ZipCode</string>
    <string name="address">Address</string>
    <string name="enterAddress">Enter your address here</string>
    <string name="enterCity">Enter city here</string>
    <string name="enterState">Enter state here</string>
    <string name="enterZipCode">Enter Zip code</string>
    <string name="next">Next</string>
    <string name="exteriorPictures">Put 4 exterior pictures here</string>
    <string name="uploadImage">Upload Image</string>
    <string name="exterior1">Exterior Image 1</string>
    <string name="exterior2">Exterior Image 2</string>
    <string name="exterior3">Exterior Image 3</string>
    <string name="exterior4">Exterior Image 4</string>
    <string name="interiorPictures">Enter 2 Internal pictures here</string>
    <string name="interior1">Interior Image 1</string>
    <string name="interior2">Interior Image 2</string>
    <string name="drivingLicenseNumber">Enter Driving License Number</string>
    <string name="detailsText">Tell us about you</string>
    <string name="drivingLicenseState">Enter Driving license State</string>
    <string name="drivingLicenseInfo">Driving License Information</string>
    <string name="verifyNumberHeading">Verify your phone number</string>
    <string name="enterPhoneNumber">Enter your phone number</string>
    <string name="enterCode">Enter the received code here</string>
    <string name="enterCodeHere">Enter code here</string>
    <string name="getVerificationCode">Get verification Code</string>
    <string name="verifyCode">verify Code</string>
    <string name="advancedNoticeTitle">You are just one step away from earning extra money</string>
    <string name="advanceNotice">Advance notice</string>
    <string name="advancedNoticeAdvice">Block trips that don\'t give you enough advance notice.</string>
    <string name="shortestTripHeading">How long would you like trips to last?</string>
    <string name="shortestPossibleTrip">Shortest possible trip</string>
    <string name="longestPossibleTrip">Longest Possible trip</string>
    <string name="enterLongestTrip">Enter the value of longest possible trip</string>
    <string name="finalStepTitle">Final step to publish</string>
    <string name="registrationImage">Registration Image</string>
    <string name="insuranceImage">Insurance Image</string>
    <string name="drivingLicenseIimage">Driving License Image</string>
    <string name="maxValue20000">20000</string>
    <string name="minValue0">0</string>
    <string name="expectedRentAmount">Expected amount for rent</string>
    <string name="selectedPrice">Estimated price you selected is:</string>
    <string name="signin">Sign in</string>
    <string name="email">email</string>
    <string name="passwd">password</string>
    <string name="signup">Sign Up</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="signInOptionTitle">Please sign in to complete the process</string>
    <string name="selectDate">Click here to select date</string>
    <string name="fromAndTo">Select from and to dates</string>
    <string name="book">Book Now</string>
    <string name="Date">Date</string>
    <string name="time">Time</string>
    <string name="selectTime">Click here to select time</string>
    <string name="withDriver">With Driver</string>
    <string name="withoutDriver">Without Driver</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="driverTitle">Please select with or without driver option</string>
    <string name="distanceTitle">Please select the maximum distance allowed</string>
    <string name="enterAmount">Enter suitable rent amount</string>
    <string name="Amount">Enter rental amount</string>
    <string name="reservecar">Reserve Car</string>
    <string name="more_options">More Options</string>
    <string name="log_out">Log Out</string>
    <string name="my_account">My Account</string>
    <string name="licensePlate">License Plate Number</string>
    <string name="enterLicensePlate">Enter the number on license Plate</string>
    <string name="carPictures">Please Upload 3 Car Pictures</string>
    <string name="imageText2">Image 2</string>
    <string name="imageText3">Image 3</string>
    <string name="imageText1">Image 1</string>
    <string name="ThankYouText">Thank you for publishing your car with us.   We are happy to help you earn more</string>
    <string name="Home">Home</string>
    <string name="carPictures2">Upload Your License and ID Images</string>
    <string name="licenseText">Upload License Image</string>
    <string name="IDImage">Upload ID image</string>
    <string name="contactNumber">Contact Number</string>


    <string-array name="transmissionArray">
        <item> Manual </item>
        <item> Automatic </item>
    </string-array>

    <string-array name="styleArray">
        <item> Hatchback </item>
        <item> Compact Sedan </item>
        <item> Full Size Sedan </item>
        <item> Minivan </item>
        <item> Truck </item>
    </string-array>

    <string-array name="statesArray">
        <item> Balochistan </item>
        <item> Punjab </item>
        <item> Sindh </item>
        <item> Khyber Pakhtunkhwa </item>
        <item> Islamabad Capital Territory  </item>
    </string-array>

    <string-array name="advNoticeArray">
        <item> 12 Hours </item>
        <item> 1 Day </item>
        <item> 2 Days </item>
        <item> 3 Days </item>
        <item> 7 Days </item>
    </string-array>

    <string-array name="shortestTripArray">
        <item> 1 Day </item>
        <item> 2 Days </item>
    </string-array>


    <string-array name="longestDistanceArray">
        <item> Set Limit </item>
        <item> No Limit </item>
    </string-array>

</resources>
